change features desc

--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -143,12 +143,12 @@
             <p>Just a simple TicTacToe project, which I created with the help of ChatGPT</p>
             <h2>Features</h2>
             <ul>
-                <li>A basic computer player that can respond with random moves</li>
+                <li>A basic computer player that can respond winning moves</li>
                 <li>A reset feature that allows you to start a new game with a fresh board</li>
             </ul>
             <p>Planning to add more stuff(Hopefully): </p>
             <ul>
-                <li>Making the computer player more challenging with better moves</li>
+                <li>Making the computer prevent player from winning</li>
                 <li>Adding a scoreboard to keep track of wins and losses</li>
             </ul>
         </section>
