--- a/projects/chat.html
+++ b/projects/chat.html
@@ -57,6 +57,8 @@
                     <li>textblob</li>
                     <li>nltk</li>
                     <li>deep_translator</li>
+                    <li>wolframalpha</li>
+                    <li>revchatgpt</li>
                 </ul>
                 <p>You can install these packages using the following command:</p>
                 <pre>pip install -r requirements.txt</pre>
