--- a/projects/topdownshooter.html
+++ b/projects/topdownshooter.html
@@ -18,6 +18,7 @@
                     <li>
                         <a href="#">Projects</a>
                         <ul>
+                            <li><a href="../projects/isbn" title="View ISBN Validator Project">ISBN Validator</a></li>
                             <li><a href="../projects/chat" title="View SimpleChatBot project">SimpleChatBot</a></li>
                             <li><a href="../projects/tictactoe" title="View TicTacToe project">TicTacToe</a></li>
                             <li><a href="../projects/topdownshooter" title="View TopDownShooter project">TopDownShooter</a></li>
@@ -65,7 +66,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Mafari | <a href="https://github.com/mafarit">GitHub</a></p>
+            <p>&copy; 2024 Mafari | <a href="https://github.com/mafarit">GitHub</a></p>
         </div>
     </footer>
 
