--- a/projects/isbn.html
+++ b/projects/isbn.html
@@ -22,6 +22,10 @@
       <input type="text" id="authors" disabled>
     </div>
     <div id="book-link"></div>
+
+    <footer>
+      <p>Ahmad Fadlan | <a href="https://github.com/MafariT/isbn-validator">Project Repository</a></p>
+    </footer>
   </div>
   <script src="../static/js/isbn.js"></script>
 </body>
